lib/core/api/ximu3_bindings.g.dart


final class lldiv_t extends ffi.Struct {
  @ffi.LongLong()
  external int quot;

  @ffi.LongLong()
  external int rem;
}

typedef malloc_type_id_t = ffi.UnsignedLongLong;
typedef Dartmalloc_type_id_t = int;

final class _malloc_zone_t extends ffi.Opaque {}

typedef malloc_zone_t = _malloc_zone_t;
typedef dev_t = __darwin_dev_t;
typedef __darwin_dev_t = __int32_t;
typedef mode_t = __darwin_mode_t;
typedef __darwin_mode_t = __uint16_t;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;

abstract class XIMU3_ChargingStatus {
  static const int XIMU3_ChargingStatusNotConnected = 0;
  static const int XIMU3_ChargingStatusCharging = 1;
  static const int XIMU3_ChargingStatusChargingComplete = 2;
}

abstract class XIMU3_ConnectionType {
  static const int XIMU3_ConnectionTypeUsb = 0;
  static const int XIMU3_ConnectionTypeSerial = 1;
  static const int XIMU3_ConnectionTypeTcp = 2;
  static const int XIMU3_ConnectionTypeUdp = 3;
  static const int XIMU3_ConnectionTypeBluetooth = 4;
  static const int XIMU3_ConnectionTypeFile = 5;
}

abstract class XIMU3_DecodeError {
  static const int XIMU3_DecodeErrorBufferOverrun = 0;
  static const int XIMU3_DecodeErrorInvalidMessageIdentifier = 1;
  static const int XIMU3_DecodeErrorInvalidUtf8 = 2;
  static const int XIMU3_DecodeErrorInvalidJson = 3;
  static const int XIMU3_DecodeErrorJsonIsNotAnObject = 4;
  static const int XIMU3_DecodeErrorJsonObjectIsNotASingleKeyValuePair = 5;
  static const int XIMU3_DecodeErrorInvalidEscapeSequence = 6;
  static const int XIMU3_DecodeErrorInvalidBinaryMessageLength = 7;
  static const int XIMU3_DecodeErrorUnableToParseAsciiMessage = 8;
}

abstract class XIMU3_FileConverterStatus {
  static const int XIMU3_FileConverterStatusComplete = 0;
  static const int XIMU3_FileConverterStatusFailed = 1;
  static const int XIMU3_FileConverterStatusInProgress = 2;
}

abstract class XIMU3_Result {
  static const int XIMU3_ResultOk = 0;
  static const int XIMU3_ResultError = 1;
}

final class XIMU3_Connection extends ffi.Opaque {}

final class XIMU3_DataLogger extends ffi.Opaque {}

final class XIMU3_FileConverter extends ffi.Opaque {}

final class XIMU3_NetworkAnnouncement extends ffi.Opaque {}

final class XIMU3_PortScanner extends ffi.Opaque {}

final class XIMU3_CharArrays extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<ffi.Char>> array;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int capacity;
}

final class XIMU3_UsbConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> port_name;
}

final class XIMU3_SerialConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> port_name;

  @ffi.Uint32()
  external int baud_rate;

  @ffi.Bool()
  external bool rts_cts_enabled;
}

final class XIMU3_TcpConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> ip_address;

  @ffi.Uint16()
  external int port;
}

final class XIMU3_UdpConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> ip_address;

  @ffi.Uint16()
  external int send_port;

  @ffi.Uint16()
  external int receive_port;
}

final class XIMU3_BluetoothConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> port_name;
}

final class XIMU3_FileConnectionInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> file_path;
}

final class XIMU3_PingResponse extends ffi.Struct {
  @ffi.Int32()
  external int result;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> interface1;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> device_name;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> serial_number;
}

final class XIMU3_Statistics extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Uint64()
  external int data_total;

  @ffi.Uint32()
  external int data_rate;

  @ffi.Uint64()
  external int message_total;

  @ffi.Uint32()
  external int message_rate;

  @ffi.Uint64()
  external int error_total;

  @ffi.Uint32()
  external int error_rate;
}

final class XIMU3_InertialMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double gyroscope_x;

  @ffi.Float()
  external double gyroscope_y;

  @ffi.Float()
  external double gyroscope_z;

  @ffi.Float()
  external double accelerometer_x;

  @ffi.Float()
  external double accelerometer_y;

  @ffi.Float()
  external double accelerometer_z;
}

final class XIMU3_MagnetometerMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class XIMU3_QuaternionMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double w;

  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class XIMU3_RotationMatrixMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double xx;

  @ffi.Float()
  external double xy;

  @ffi.Float()
  external double xz;

  @ffi.Float()
  external double yx;

  @ffi.Float()
  external double yy;

  @ffi.Float()
  external double yz;

  @ffi.Float()
  external double zx;

  @ffi.Float()
  external double zy;

  @ffi.Float()
  external double zz;
}

final class XIMU3_EulerAnglesMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double roll;

  @ffi.Float()
  external double pitch;

  @ffi.Float()
  external double yaw;
}

final class XIMU3_LinearAccelerationMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double quaternion_w;

  @ffi.Float()
  external double quaternion_x;

  @ffi.Float()
  external double quaternion_y;

  @ffi.Float()
  external double quaternion_z;

  @ffi.Float()
  external double acceleration_x;

  @ffi.Float()
  external double acceleration_y;

  @ffi.Float()
  external double acceleration_z;
}

final class XIMU3_EarthAccelerationMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double quaternion_w;

  @ffi.Float()
  external double quaternion_x;

  @ffi.Float()
  external double quaternion_y;

  @ffi.Float()
  external double quaternion_z;

  @ffi.Float()
  external double acceleration_x;

  @ffi.Float()
  external double acceleration_y;

  @ffi.Float()
  external double acceleration_z;
}

final class XIMU3_AhrsStatusMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double initialising;

  @ffi.Float()
  external double angular_rate_recovery;

  @ffi.Float()
  external double acceleration_recovery;

  @ffi.Float()
  external double magnetic_recovery;
}

final class XIMU3_HighGAccelerometerMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class XIMU3_TemperatureMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double temperature;
}

final class XIMU3_BatteryMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double percentage;

  @ffi.Float()
  external double voltage;

  @ffi.Float()
  external double charging_status;
}

final class XIMU3_RssiMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Float()
  external double percentage;

  @ffi.Float()
  external double power;
}

final class XIMU3_SerialAccessoryMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> char_array;

  @ffi.Size()
  external int number_of_bytes;
}

final class XIMU3_NotificationMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> char_array;

  @ffi.Size()
  external int number_of_bytes;
}

final class XIMU3_ErrorMessage extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> char_array;

  @ffi.Size()
  external int number_of_bytes;
}

final class XIMU3_FileConverterProgress extends ffi.Struct {
  @ffi.Int32()
  external int status;

  @ffi.Float()
  external double percentage;

  @ffi.Uint64()
  external int bytes_processed;

  @ffi.Uint64()
  external int bytes_total;
}

final class XIMU3_NetworkAnnouncementMessage extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> device_name;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> serial_number;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> ip_address;

  @ffi.Uint16()
  external int tcp_port;

  @ffi.Uint16()
  external int udp_send;

  @ffi.Uint16()
  external int udp_receive;

  @ffi.Int32()
  external int rssi;

  @ffi.Int32()
  external int battery;

  @ffi.Int32()
  external int charging_status;
}

final class XIMU3_NetworkAnnouncementMessages extends ffi.Struct {
  external ffi.Pointer<XIMU3_NetworkAnnouncementMessage> array;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int capacity;
}

final class XIMU3_Device extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> device_name;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> serial_number;

  @ffi.Int32()
  external int connection_type;

  external XIMU3_UsbConnectionInfo usb_connection_info;

  external XIMU3_SerialConnectionInfo serial_connection_info;

  external XIMU3_BluetoothConnectionInfo bluetooth_connection_info;
}

final class XIMU3_Devices extends ffi.Struct {
  external ffi.Pointer<XIMU3_Device> array;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int capacity;
}
